--- a/demo/index.html
+++ b/demo/index.html
@@ -6,18 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <script src="https://cdn.jsdelivr.net/npm/share-localstorage@1.0.1"></script>
+  <script src="https://cdn.jsdelivr.net/npm/share-localstorage@1.0.3"></script>
 </head>
 <body>
   <script>
-    shareLocalstorage.init().then(res => {
-      console.log({ res })
-
-      shareLocalstorage.setItem('test', 'test').then(set => {
+    shareLocalstorage.init().then(() => {
+      shareLocalstorage.setItem('test1', 'test1').then(set => {
         console.log({ set })
-
-        shareLocalstorage.getItem('test').then(get => console.log)
       })
+      setTimeout(() => {
+        shareLocalstorage.getItem('test').then(get => console.log({ get }))
+      }, 1000)
     })
   </script>
 </body>
