--- a/demo/iife.t.html
+++ b/demo/iife.t.html
@@ -6,29 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <script src="https://cdn.jsdelivr.net/npm/share-localstorage@1.0.8/dist/main.iife.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/share-localstorage@1.0.9/dist/main.iife.js"></script>
 </head>
 <body>
   <script>
     shareLocalstorage.init()
       .then(() => {
-        shareLocalstorage.setItem('test4', 'test4')
+        return shareLocalstorage.setItem('test5', 'test5')
       })
       .then(set => {
         console.log({ set })
-        shareLocalstorage.getItem('test4')
+        return shareLocalstorage.getItem('test5')
       })
       .then(get => {
         console.log({ get })
-        shareLocalstorage.removeItem('test4')
+        return shareLocalstorage.removeItem('test5')
       })
       .then(remove => {
         console.log({ remove })
-        shareLocalstorage.getItem('test4')
+        return shareLocalstorage.getItem('test4')
       })
       .then(get => {
         console.log({ get })
+        return shareLocalstorage.destory()
       })
+      .catch(console.error)
   </script>
 </body>
 </html>
