--- a/es.t.html
+++ b/es.t.html
@@ -7,8 +7,8 @@
   <title>es test</title>
 </head>
 <body>
-  <script>
-    import shareLocalstorage from 'https://cdn.jsdelivr.net/npm/share-localstorage@1.1.0'
+  <script type="module">
+    import shareLocalstorage from 'https://cdn.jsdelivr.net/npm/share-localstorage@1.1.1'
 
     shareLocalstorage.init()
       .then(() => {
