--- a/iife.t.html
+++ b/iife.t.html
@@ -9,6 +9,29 @@
   <script src="https://cdn.jsdelivr.net/npm/share-localstorage@1.1.2/dist/main.iife.js"></script>
 </head>
 <body>
+  <pre>
+    shareLocalstorage.init()
+      .then(() => {
+        return shareLocalstorage.setItem('test5', 'test5')
+      })
+      .then(set => {
+        console.log({ set })
+        return shareLocalstorage.getItem('test5')
+      })
+      .then(get => {
+        console.log({ get })
+        return shareLocalstorage.removeItem('test5')
+      })
+      .then(remove => {
+        console.log({ remove })
+        return shareLocalstorage.getItem('test5')
+      })
+      .then(get => {
+        console.log({ get })
+        return shareLocalstorage.destory()
+      })
+      .catch(console.error)
+  </pre>
   <script>
     shareLocalstorage.init()
       .then(() => {
